[gd_scene load_steps=8 format=3 uid="uid://7ieeuop6l48q"]

[ext_resource type="Script" path="res://Scripts/electrical/red_button.gd" id="1_yi8y6"]
[ext_resource type="Texture2D" uid="uid://bg67mmftbogjc" path="res://Imports/buttonmaze_utils/red_button.png" id="2_q5xq1"]
[ext_resource type="AudioStream" uid="uid://ckq8r03kua3kn" path="res://Imports/Music/SFX/ButtonPress.mp3" id="3_ad8as"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij33d"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0w74"]
atlas = ExtResource("2_q5xq1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uj0k"]
atlas = ExtResource("2_q5xq1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gb6jg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0w74")
}],
"loop": true,
"name": &"off",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uj0k")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[node name="red_button" type="Area2D"]
z_index = -1
script = ExtResource("1_yi8y6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ij33d")
debug_color = Color(0.174948, 0.516156, 1, 0.42)

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_gb6jg")
animation = &"off"
autoplay = "off"

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ad8as")
volume_db = -25.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
